plugins {
    id 'de.aaschmid.cpd' version '0.4'
}

group 'ar.fiuba.tdd.tp-tp-grupal'
version '1.0'

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'eclipse'
apply plugin: 'checkstyle'
apply plugin: 'maven'
apply plugin: 'findbugs'
apply plugin: 'pmd'
apply plugin: "jacoco"
apply from: 'gradle/fatjar.gradle'
apply from: 'gradle/quality.gradle'

/*tasks.withType(FindBugs) {
    reports {
        xml.enabled = false
        html.enabled = true
    }
}

tasks.withType(Checkstyle) {
    reports {
        xml.enabled = false
        html.enabled = true
    }
}*/

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    jcenter()
    maven {
        url "http://nexus-tecnicas7510.rhcloud.com/nexus/content/repositories/third-party"
    }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.11'
}

configurations.all {
    resolutionStrategy {
        force 'xml-apis:xml-apis:1.4.01'
    }
}
